= RSpec Changelog

== Version 0.7.5 (Not yet released)

Release notes go here.
Checklist: Are all the new features documented in both the website and rdoc?

* Fixed [#6760] fatal error when accessing nested finders in rspec
* Fixed [#7179] script/generate rspec_resource generates incorrect helper name
* Added preliminary support for assert_select (response.should_have)
* Fixed [#6971] and_yield does not work when the arity is -1
* Fixed [#6898] Can we separate rspec from the plugins?
* Added [#7025] should_change should accept a block
* Applied [#6989] partials with locals (patch from Micah Martin)
* Applied [#7023] Typo in team.page

== Version 0.7.4

This release features a complete redesign of the reports generated with --format html.
As usual there are many bug fixes - mostly related to spec/rails.

* Applied [#7010] Fixes :spacer_template does not work w/ view spec (patch from Shintaro Kakutani)
* Applied [#6798] ensure two ':' in the first backtrace line for Emacs's 'next-error' command (patch from Kouhei Sutou)
* Added Much nicer reports to generated website
* Much nicer reports with --format --html (patch from Luke Redpath)
* Applied [#6959] Calls to render and redirect in controllers should return true
* Fixed [#6981] helper method is not available in partial template.
* Added [#6978] mock should tell you the expected and actual args when receiving the right message with the wrong args
* Added the possibility to tweak the output of the HtmlFormatter (by overriding extra_failure_content).
* Fixed [#6936] View specs don't include ApplicationHelper by default
* Fixed [#6903] Rendering a partial in a view makes the view spec blow up
* Added callback library from Brian Takita
* Added [#6925] support controller.should_render :action_name
* Fixed [#6884] intermittent errors related to method binding
* Fixed [#6870] rspec on edge rails spec:controller fixture loading fails
* Using obj.inspect for all messages