@@ -5,6 +5,7 @@
 Release notes go here.
 Checklist: Are all the new features documented in both the website and rdoc?
 
+* Added [#7249] stubs should support yielding
 * Fixed [#6760] fatal error when accessing nested finders in rspec
 * Fixed [#7179] script/generate rspec_resource generates incorrect helper name
 * Added preliminary support for assert_select (response.should_have)
